drafting python side end user tech code

--- a/templates/index.html
+++ b/templates/index.html
@@ -834,8 +834,12 @@
                         </div>
                         <div class="row" style="overflow: hidden;">
                             <div class="col" style="width: 80%">
-                                <button style="width: 80%; text-align: left; height: 3.25vh;"
-                                        onclick="add_end_user_tech()">Add end user tech</button>
+                                <button style="width: 100%; text-align: left; height: 3.25vh;"
+                                        onclick="add_end_user_tech_from_gui()">Apply end user tech based on inputs</button>
+                                <button style="width: 100%; text-align: left; height: 3.25vh;"
+                                        onclick="">Apply end user tech based on file</button>
+                                <button style="width: 100%; text-align: left; height: 3.25vh;"
+                                        onclick="">Save end user tech sample to file</button>
                             </div>
                         </div>
                     </div>
