drafting python side end user tech code

--- a/templates/index.html
+++ b/templates/index.html
@@ -837,9 +837,9 @@
                                 <button style="width: 100%; text-align: left; height: 3.25vh;"
                                         onclick="add_end_user_tech_from_gui()">Apply end user tech based on inputs</button>
                                 <button style="width: 100%; text-align: left; height: 3.25vh;"
-                                        onclick="">Apply end user tech based on file</button>
+                                        onclick="add_end_user_tech_from_file()">Apply end user tech based on file</button>
                                 <button style="width: 100%; text-align: left; height: 3.25vh;"
-                                        onclick="">Save end user tech sample to file</button>
+                                        onclick="save_end_user_tech_sample()">Save end user tech sample to file</button>
                             </div>
                         </div>
                     </div>
