remove styling from inputs outside main div

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         font-size: 1.75vh;
       }
 
-      select, input:not(li input) {
+      select, .main input {
         height: 3.0vh;
         margin-bottom: 1.25vh;
         width: 100%;
@@ -66,7 +66,7 @@
         box-sizing: border-box;
       }
 
-      input:not(li input) {
+      .main input {
         width: 100%;
         display: inline;
         max-width: 600px;
@@ -106,7 +106,7 @@
             font-size: 14px;
         }
 
-        select, input:not(li input) {
+        select, .main input {
             height: 24px;
             margin-bottom: 10px;
         }
