fixed case controller sizing issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -398,11 +398,11 @@
       }
 
       .case_info_button, .case_delete_button, .case_visibility_checkbox {
-        height: 18px;
-        width: 18px;
-        font-size: 12px;
-        padding:0;
-        vertical-align: top;
+        height: 2vh !important;
+        width: 2vh !important;
+        font-size: 1.25vh !important;
+        padding:0 !important;
+        vertical-align: top !important;
       }
 
       .x_peak_options, .y_peak_options {
@@ -489,7 +489,7 @@
     </div>
 
     <div id="case_control_template" class="row case_control"
-         style="width: 100%; margin-bottom: 2vh; float: left;">
+         style="width: 100%; float: left;">
         <div class="case_label" style="vertical-align: middle; width: 30%; display: inline;"></div>
         <input class="case_visibility_checkbox" type="checkbox" style="width: 10%;"
                checked onclick="on_checkbox_change()">
