draft file dialog

--- a/templates/index.html
+++ b/templates/index.html
@@ -503,6 +503,8 @@
         <tbody class="tariff_table_body"></tbody>
     </table>
 
+    <input type="file" accept=".tda_results" id="file1"  webkitdirectory  style="display:none">
+
 </head>
 
 <body>
