update single variable charts and dual variable charts

--- a/templates/index.html
+++ b/templates/index.html
@@ -907,8 +907,19 @@
                                 <option value="Monthly Average kWh">Monthly Average kWh</option>
                                 <option value="Seasonal Daily Pattern">Seasonal Daily Pattern</option>
                                 <option value="Monthly Peak Time">Monthly Peak Time</option>
-                                <option value="Bill Distribution">Bill Distribution</option>
-                                <option value="Bill Box Plot">Bill Box Plot</option>
+
+                                <option value="Bill Distribution NUOS">Bill distribution (NUOS)</option>
+                                <option value="Bill Distribution DUOS">Bill distribution (DUOS)</option>
+                                <option value="Bill Distribution TUOS">Bill distribution (TUOS)</option>
+                                <option value="Bill Distribution Retailer">Bill distribution (Retailer)</option>
+                                <option value="Bill Distribution Wholesale">Bill distribution (Wholesale)</option>
+
+                                <option value="Bill Box Plot NUOS">Bill box plot (NUOS)</option>
+                                <option value="Bill Box Plot DUOS">Bill box plot (DUOS)</option>
+                                <option value="Bill Box Plot TUOS">Bill box plot (TUOS)</option>
+                                <option value="Bill Box Plot Retailer">Bill box plot (Retailer)</option>
+                                <option value="Bill Box Plot Wholesale">Bill box plot (Wholesale)</option>
+
                             </select>
                         </div>
                         <script src="static/plot_results.js"></script>
@@ -930,8 +941,11 @@
                                 <option value="avg_demand_top_n_monthly_peaks">Average Demand at Top 'N' Monthly Peaks</option>
                                 <option value="avg_daily_kWh">Average Daily kWh</option>
                                 <option value="avg_daily_peak">Average Daily Peak</option>
-                                <option value="Bill">Bill ($/year)</option>
-                                <option value="unitised_bill_kW">Unitised Bill (kW)</option>
+                                <option value="Bill NUOS">Bill NUOS ($/year)</option>
+                                <option value="Bill DUOS">Bill DUOS ($/year)</option>
+                                <option value="Bill TUOS">Bill TUOS ($/year)</option>
+                                <option value="Bill Retailer">Bill Retailer ($/year)</option>
+                                <option value="Bill Wholesale">Bill Wholesale ($/year)</option>
                             </select>
                             <script src="static/plot_results.js"></script>
                             <br/>
@@ -943,8 +957,11 @@
                                 <option value="avg_demand_top_n_monthly_peaks">Average Demand at Top 'N' Monthly Peaks</option>
                                 <option value="avg_daily_kWh">Average Daily kWh</option>
                                 <option value="avg_daily_peak">Average Daily Peak</option>
-                                <option value="Bill">Bill ($/year)</option>
-                                <option value="unitised_bill_kW">Unitised Bill (kW)</option>
+                                <option value="Bill NUOS">Bill NUOS ($/year)</option>
+                                <option value="Bill DUOS">Bill DUOS ($/year)</option>
+                                <option value="Bill TUOS">Bill TUOS ($/year)</option>
+                                <option value="Bill Retailer">Bill Retailer ($/year)</option>
+                                <option value="Bill Wholesale">Bill Wholesale ($/year)</option>
                             </select>
                             <script src="static/plot_results.js"></script>
                         </div>
