split results tabs

--- a/templates/index.html
+++ b/templates/index.html
@@ -889,9 +889,14 @@
         <div id="results_panel" class="main_tab_content">
             <div class="results_area">
                 <div id="results_tab_set" class="tab_button_area">
-                    <button id="default_results_tab" class="results_tab_links" onclick="displayResults(event, 'single_variable_tab')">Single variable graphs</button>
-                    <button id="dual_var_button" class="results_tab_links" onclick="displayResults(event, 'dual_variable_tab')">Dual variable graphs</button>
-                    <button id="single_case_button" class="results_tab_links" onclick="displayResults(event, 'single_case_tab')">Single case graphs</button>
+                    <button id="default_results_tab" class="results_tab_links"
+                            onclick="displayResults(event, 'single_variable_tab')">Bill info</button>
+                    <button id="default_results_tab_2" class="results_tab_links"
+                            onclick="displayResults(event, 'single_variable_tab_2')">Load info</button>
+                    <button id="dual_var_button" class="results_tab_links"
+                            onclick="displayResults(event, 'dual_variable_tab')">Variable correlations</button>
+                    <button id="single_case_button" class="results_tab_links"
+                            onclick="displayResults(event, 'single_case_tab')">Bill components</button>
                 </div>
                 <div id="single_variable_tab" class="results_tab_content">
                     <div id="single_variable_result_chart" class="row chart" style="height: 80%"></div>
@@ -901,14 +906,27 @@
                         </div>
                         <div class="col" style="width: 80%">
                             <select id="single_variable_chart_type" style="width: 50%">
+                                <option value="Bill Distribution">Bill Distribution</option>
+                                <option value="Bill Box Plot">Bill Box Plot</option>
+                            </select>
+                        </div>
+                        <script src="static/plot_results.js"></script>
+                    </div>
+                </div>
+                <div id="single_variable_tab_2" class="results_tab_content">
+                    <div id="single_variable_result_chart_2" class="row chart" style="height: 80%"></div>
+                    <div class="row" style="height: 20%">
+                        <div class="col">
+                            <div class="label_line">Select figure:&nbsp</div>
+                        </div>
+                        <div class="col" style="width: 80%">
+                            <select id="single_variable_chart_type_2" style="width: 50%">
                                 <option value="Average Annual Profile">Average Annual Profile</option>
                                 <option value="Daily kWh Histogram">Daily kWh Histogram</option>
                                 <option value="Average Load Duration Curve">Average Load Duration Curve</option>
                                 <option value="Monthly Average kWh">Monthly Average kWh</option>
                                 <option value="Seasonal Daily Pattern">Seasonal Daily Pattern</option>
                                 <option value="Monthly Peak Time">Monthly Peak Time</option>
-                                <option value="Bill Distribution">Bill Distribution</option>
-                                <option value="Bill Box Plot">Bill Box Plot</option>
                             </select>
                         </div>
                         <script src="static/plot_results.js"></script>
